--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,9 +8,15 @@ android {
         applicationId "com.liqy.imapp"
         minSdkVersion 15
         targetSdkVersion 26
-        versionCode 1
-        versionName "1.0"
+        versionCode 101
+        versionName "1.0.1"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+
+        ndk {
+            //设置支持的SO库架构
+            abiFilters 'armeabi' //, 'x86', 'armeabi-v7a', 'x86_64', 'arm64-v8a'
+        }
+
     }
     //第四步
     signingConfigs {
@@ -30,6 +36,7 @@ android {
             signingConfig signingConfigs.sankuai//第五步
         }
     }
+
     externalNativeBuild {
         cmake {
             path 'src/main/jni/CMakeLists.txt'
@@ -47,6 +54,11 @@ dependencies {
 
     //第三步
     compile 'com.meituan.android.walle:library:1.1.6'
+
+    //注释掉原有bugly的仓库
+    //compile 'com.tencent.bugly:crashreport:latest.release'//其中latest.release指代最新版本号，也可以指定明确的版本号，例如2.3.2
+    compile 'com.tencent.bugly:crashreport_upgrade:latest.release'//其中latest.release指代最新版本号，也可以指定明确的版本号，例如1.2.0
+    compile 'com.tencent.bugly:nativecrashreport:latest.release' //其中latest.release指代最新版本号，也可以指定明确的版本号，例如2.2.0
 }
 
 //第六步
