--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,13 +8,13 @@ android {
         applicationId "com.liqy.imapp"
         minSdkVersion 15
         targetSdkVersion 26
-        versionCode 102
-        versionName "1.0.2"
+        versionCode 103
+        versionName "1.0.3"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
 
         ndk {
             //设置支持的SO库架构
-            abiFilters 'armeabi' //, 'x86', 'armeabi-v7a', 'x86_64', 'arm64-v8a'
+            abiFilters 'armeabi' , 'x86', 'armeabi-v7a', 'x86_64', 'arm64-v8a'
         }
 
     }
